image animation --done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- bootstrap 5  -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <!-- main css -->
+    <link rel="stylesheet" href="./assets/css/animation.css">
     <link rel="stylesheet" href="./assets/css/main.css">
 
     <title>Formalize - Streamline your compliance workflows</title>
@@ -70,15 +71,15 @@
                                     ISO27001, NIS2, SOC2</span> and more.</p>
 
                             <div class="hero-btn-wrapper">
-                                <a class="cmn--btn" href="">Book a demo</a>
-                                <a class="cmn--btn btn-outline" href="">Try for free</a>
+                                <a class="cmn--btn fadeUp" href="">Book a demo</a>
+                                <a class="cmn--btn fadeUp btn-outline" data-animation-delay="300" href="">Try for free</a>
                                 <p class="signed-up-text"><span>128</span> companies just signed up</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="hero-thumb">
-                            <img src="assets/images/hero-thumb1.png" alt="images">
+                            <img src="assets/images/hero-thumb1.png" alt="images" class="fadeIn">
                         </div>
                     </div>
                 </div>
@@ -93,19 +94,19 @@
                     companies</div>
                 <div class="build-logo-wrapper d-flex flex-wrap justify-content-between">
                     <div class="single-logo-item">
-                        <img src="assets/images/build-logo/build-logo1.png" alt="logo">
+                        <img src="assets/images/build-logo/build-logo1.png" alt="logo" class="fadeIn">
                     </div>
                     <div class="single-logo-item">
-                        <img src="/assets/images/build-logo/build-logo2.png" alt="logo">
+                        <img src="assets/images/build-logo/build-logo2.png" alt="logo" class="fadeIn">
                     </div>
                     <div class="single-logo-item">
-                        <img src="/assets/images/build-logo/build-logo3.png" alt="logo">
+                        <img src="assets/images/build-logo/build-logo3.png" alt="logo" class="fadeIn">
                     </div>
                     <div class="single-logo-item">
-                        <img src="/assets/images/build-logo/build-logo4.png" alt="logo">
+                        <img src="assets/images/build-logo/build-logo4.png" alt="logo" class="fadeIn">
                     </div>
                     <div class="single-logo-item">
-                        <img src="/assets/images/build-logo/build-logo5.png" alt="logo">
+                        <img src="assets/images/build-logo/build-logo5.png" alt="logo" class="fadeIn">
                     </div>
                 </div>
             </div>
@@ -121,7 +122,7 @@
                 <div class="workflow-content-wrapper">
                     <div class="row align-items-center">
                         <div class="col-lg-6">
-                            <div class="workflow-thumb">
+                            <div class="workflow-thumb fadeIn">
                                 <img src="assets/images/workflow/workflow-thumb1.png" alt="workflow">
                             </div>
                         </div>
@@ -178,7 +179,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <div class="workflow-thumb">
+                            <div class="workflow-thumb fadeIn">
                                 <img src="assets/images/workflow/workflow-thumb1.png" alt="workflow">
                             </div>
                         </div>
@@ -187,7 +188,7 @@
                 <div class="workflow-content-wrapper">
                     <div class="row align-items-center">
                         <div class="col-lg-6">
-                            <div class="workflow-thumb">
+                            <div class="workflow-thumb fadeIn">
                                 <img src="assets/images/workflow/workflow-thumb1.png" alt="workflow">
                             </div>
                         </div>
