--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section class="hero-section">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                         <div class="hero-content">
                             <h1 class="hero-content__title">Streamline your compliance workflows</h1>
                             <p class="hero-content__pera">Improve and automate your compliance processes for <span>GDPR,
@@ -77,7 +77,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                         <div class="hero-thumb">
                             <img src="assets/images/hero-thumb1.png" alt="images" class="fadeIn">
                         </div>
