--- a/index.html
+++ b/index.html
@@ -22,26 +22,29 @@
     <!-- header part start -->
     <nav class="header">
         <div class="container">
-            <div class="nav-wrapper d-flex flex-wrap justify-content-between align-items-center">
+            <div class="nav-wrapper d-flex flex-wrap align-items-center justify-content-between">
                 <div class="nav-content-left">
                     <div class="logo">
                         <a href="">Formalize</a>
                     </div>
+                </div>
+                <span id="headerToggler" class="d-lg-none">
+                    <img src="./assets/images/icons/burger.svg" alt="" width="28">
+                </span>
+                <div class="nav-content-right d-flex align-items-center justify-content-between flex-grow-1">
                     <ul class="main-menu d-flex flex-wrap">
                         <li><a href="">Use cases</a></li>
                         <li><a href="">Pricing</a></li>
                         <li><a href="">Contact</a></li>
                     </ul>
-                </div>
-                <div class="nav-content-right">
                     <div class="d-flex flex-wrap align-items-center">
                         <div class="language-select">
                             <a href="#" class="control-lan">
                                 <img src="assets/images/icons/flag1.svg" alt="icons">
                                 <img src="assets/images/icons/arrow-bottom.svg" alt="icons">
                                 <ul>
-                                    <li><img src="assets/images/icons/flag1.svg" alt="icons"></li>
-                                    <li><img src="assets/images/icons/flag1.svg" alt="icons"></li>
+                                    <li><img src="assets/images/icons/flag1.svg" alt="icons"> En</li>
+                                    <li><img src="assets/images/icons/flag1.svg" alt="icons"> En</li>
                                 </ul>
                             </a>
                         </div>
@@ -62,9 +65,9 @@
         <!-- hero section start -->
         <section class="hero-section">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <div class="hero-content">
+                <div class="row align-items-center gy-5">
+                    <div class="col-md-6 align-self-xl-end">
+                        <div class="hero-content text-center text-md-start">
                             <h1 class="hero-content__title">Streamline your compliance workflows</h1>
                             <p class="hero-content__pera">Improve and automate your compliance processes for <span>GDPR,
                                     ISMS,
@@ -92,7 +95,7 @@
             <div class="container">
                 <div class="build-software__title text-center">We’ve build compliance software used by thousands of
                     companies</div>
-                <div class="build-logo-wrapper d-flex flex-wrap justify-content-between">
+                <div class="build-logo-wrapper d-flex flex-wrap justify-content-xl-between justify-content-md-evenly justify-content-center gap-4">
                     <div class="single-logo-item">
                         <img src="assets/images/build-logo/build-logo1.png" alt="logo" class="fadeIn">
                     </div>
@@ -151,7 +154,7 @@
                     </div>
                 </div>
                 <div class="workflow-content-wrapper">
-                    <div class="row align-items-center">
+                    <div class="row align-items-center flex-wrap-reverse">
                         <div class="col-lg-6">
                             <div class="workflow-content">
                                 <span class="title-info">Reporting</span>
