--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-
+    <div class="overlay" id="overlay"></div>
     <!-- header part start -->
     <nav class="header">
         <div class="container">
@@ -31,12 +31,20 @@
                 <span id="headerToggler" class="d-lg-none">
                     <img src="./assets/images/icons/burger.svg" alt="" width="28">
                 </span>
-                <div class="nav-content-right d-flex align-items-center justify-content-between flex-grow-1">
-                    <ul class="main-menu d-flex flex-wrap">
-                        <li><a href="">Use cases</a></li>
-                        <li><a href="">Pricing</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
+                <div class="nav-content-right d-flex align-items-center justify-content-between flex-grow-1" id="responsiveHeader">
+                    <div class="width-u-100">
+                        <div class="d-flex align-items-center justify-content-between w-100 d-lg-none">
+                            <div class="logo">
+                                <a href="">Formalize</a>
+                            </div>
+                            <span id="closeHeader"><img src="./assets/images/icons/close.svg" alt="close" width="20"></span>
+                        </div>
+                        <ul class="main-menu d-flex flex-wrap">
+                            <li><a href="">Use cases</a></li>
+                            <li><a href="">Pricing</a></li>
+                            <li><a href="">Contact</a></li>
+                        </ul>
+                    </div>
                     <div class="d-flex flex-wrap align-items-center">
                         <div class="language-select">
                             <a href="#" class="control-lan">
