asking changed --fixed

--- a/index.html
+++ b/index.html
@@ -29,30 +29,35 @@
                     </div>
                 </div>
                 <span id="headerToggler" class="d-lg-none">
-                    <img src="./assets/images/icons/burger.svg" alt="" width="28">
+                    <img src="./assets/images/icons/burger.svg" alt="" width="30">
                 </span>
                 <div class="nav-content-right d-flex align-items-center justify-content-between flex-grow-1" id="responsiveHeader">
+                    <div class="language-select d-lg-none">
+                        <a href="#" class="control-lan">
+                            <img src="assets/images/icons/flag1.svg" alt="icons">
+                            <span class="lang-text">English</span>
+                            <img src="assets/images/icons/arrow-bottom.svg" alt="icons">
+                            <ul>
+                                <li>English</li>
+                                <li>Espanol</li>
+                            </ul>
+                        </a>
+                    </div>
                     <div class="width-u-100">
-                        <div class="d-flex align-items-center justify-content-between w-100 d-lg-none">
-                            <div class="logo">
-                                <a href="">Formalize</a>
-                            </div>
-                            <span id="closeHeader"><img src="./assets/images/icons/close.svg" alt="close" width="20"></span>
-                        </div>
                         <ul class="main-menu d-flex flex-wrap">
                             <li><a href="">Use cases</a></li>
                             <li><a href="">Pricing</a></li>
                             <li><a href="">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="d-flex flex-wrap align-items-center">
-                        <div class="language-select">
+                    <div class="d-flex flex-wrap align-items-center lang-sign-wrapper">
+                        <div class="language-select d-none d-lg-block">
                             <a href="#" class="control-lan">
                                 <img src="assets/images/icons/flag1.svg" alt="icons">
                                 <img src="assets/images/icons/arrow-bottom.svg" alt="icons">
                                 <ul>
                                     <li><img src="assets/images/icons/flag1.svg" alt="icons"> En</li>
-                                    <li><img src="assets/images/icons/flag1.svg" alt="icons"> En</li>
+                                    <li><img src="assets/images/icons/flag1.svg" alt="icons"> Es</li>
                                 </ul>
                             </a>
                         </div>
@@ -144,15 +149,15 @@
                                 <p>Track and manage the implementation of NIS2, SOC2, ISO27001, GDPR, and more with ease
                                     and efficiency.</p>
                                 <ul class="workflow-list">
-                                    <li class="d-flex flex-wrap">
+                                    <li class="d-flex">
                                         <img src="assets/images/icons/checkmark.svg" alt="icons">
                                         <span>Add your custom frameworks with ease</span>
                                     </li>
-                                    <li class="d-flex flex-wrap">
+                                    <li class="d-flex">
                                         <img src="assets/images/icons/checkmark.svg" alt="icons">
                                         <span>Share controls across frameworks</span>
                                     </li>
-                                    <li class="d-flex flex-wrap">
+                                    <li class="d-flex">
                                         <img src="assets/images/icons/checkmark.svg" alt="icons">
                                         <span>Connect to existing system documentation</span>
                                     </li>
@@ -170,19 +175,19 @@
                                 <p>Build your own dashboards easily and ensure that you can always report to management
                                     and other stakeholders on:</p>
                                 <ul class="workflow-list style-two">
-                                    <li class="d-flex flex-wrap">
+                                    <li class="d-flex">
                                         <img src="assets/images/icons/checkmark.svg" alt="icons">
                                         <span>Risks</span>
                                     </li>
-                                    <li class="d-flex flex-wrap">
+                                    <li class="d-flex">
                                         <img src="assets/images/icons/checkmark.svg" alt="icons">
                                         <span>Supplier Audits</span>
                                     </li>
-                                    <li class="d-flex flex-wrap">
+                                    <li class="d-flex">
                                         <img src="assets/images/icons/checkmark.svg" alt="icons">
                                         <span>Incidents</span>
                                     </li>
-                                    <li class="d-flex flex-wrap">
+                                    <li class="d-flex">
                                         <img src="assets/images/icons/checkmark.svg" alt="icons">
                                         <span>Custom dashboards</span>
                                     </li>
